tests/test_data/gateway-api/expected/gateway.networking.k8s.io/v1/HTTPRoute/chartmuseum.yaml
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-httpr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chartmuseum
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: http
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - chartmuseum-jx.mydomain.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jenkins-x-chartmuseum
      port: 8080
