tests/test_data/gateway-api/expected/gateway.networking.k8s.io/v1/HTTPRoute/docker-registry.yaml
# Source: jxboot-helmfile-resources/templates/700-docker-httpr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: http
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - docker-registry-jx.mydomain.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jenkins-x-docker-registry
      port: 5000
